chess sixth iteration